# mew

./: .gitignore  LICENSE  README.md  pyproject.toml
mew/: __main__.py  cli.py  config.py  registry.py
mew.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
mew/backends/: conda.py  venv.py
mew/commands/: about.py  clone.py  close.py  craft.py  help.py  lock.py  open.py  remove.py  show.py  sync.py  unlock.py
mew/core/: activator.py  detector.py  ids.py  manager.py  resolver.py  scanner.py  storage.py
mew/models/: environment.py
mew/ui/: display.py  prompt.py  select.py
